--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,5 +1,5 @@
 // @import "base";
-// @import "components";
+@import "components/index";
 // @import "variants";
 @import "global.scss";
 @import "app";
