--- a/src/assets/sass/abstracts/vars/theme/_dark.scss
+++ b/src/assets/sass/abstracts/vars/theme/_dark.scss
@@ -1,4 +1,4 @@
-.dark {
+@mixin dark-theme {
   --body-bg: #333;
   --body-color: #fff;
   --primary: #7986cb; /* Lighter indigo for better readability on dark */
